2005-08-18  Albert Chu  <chu11@llnl.gov>

	* Various configuration fixes to ensure a good bgl ion build.

	* Renamed gendersllnl config module the chaos config module.

	* Added bgl config module.
	
2005-08-17  Albert Chu  <chu11@llnl.gov>

	* bgl ciod logic fix.
	
2005-08-16  Albert Chu  <chu11@llnl.gov>

	* Various cleanup fixes.

	* META: Prepare for new release.

	* tagged cerebro-1-0-0-pre5
	
2005-08-15  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Remove pointless autoconf calls.

	* etc/Makefile.am: Fix distcheck bug
	
2005-08-09  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Add bglion build.

	* Add init script for suse.
	
2005-08-08  Albert Chu  <chu11@llnl.gov>

	* Continued work to lower virtual and resident memory size.

	* Continued work to lesson binary size.

	* Complete initial bgl ciod metric module work.
	
2005-08-05  Albert Chu  <chu11@llnl.gov>

	* Some manpage fixing.

	* Fix some unlink corner cases.

	* Fix some socket setup corner cases.

	* tagged pre-lib-mem-rework-1

	* Begin rework to make resident memory size and virutal memory
	size smaller for cerebrod.
	
2005-08-04  Albert Chu  <chu11@llnl.gov>

	* Begin work on bgl ciod monitoring module.

2005-07-26  Albert Chu  <chu11@llnl.gov>

	* Fix cerebro-admin and cerebro-stat bugs.

	* Shorten slurm_state period.

	* API interface modifications.

	* Code logic fixes.

	* Code cleanup.

	* Fix dist.

	* Re-org protocol header files and make available #defines not
	related to protocols.
	
2005-07-25  Albert Chu  <chu11@llnl.gov>

	* Added metric origins to metric names index in cerebrod.

	* Fix server restart bug.

	* Add flush ability to metric controller.

	* Added flush libcall and manpages.

	* Added flush to cerebro-admin.
	
2005-07-22  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.1.in: Removed.

	* Added all GPL stuff.

	* Updated documentation with various updates.

	* Added ability to propogate and retrieve last receive time for
	metrics.
