@@ -1,3 +1,8 @@
+2005-08-19  Albert Chu  <chu11@llnl.gov>
+
+	* src/libs/common/list.c, src/libs/common/hash.c: Remove memory
+	buffering.
+	
 2005-08-18  Albert Chu  <chu11@llnl.gov>
 
 	* Various configuration fixes to ensure a good bgl ion build.
